--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -27,7 +27,7 @@
                                     <i class="fa-solid fa-users"></i>
                                 </div>
                                 <div>
-                                    <p>Registered Speakers</p>
+                                    <p>Speaker Management</p>
                                 </div>
                             </div>
                         </a>
@@ -40,7 +40,7 @@
                                     <i class="fa-solid fa-user-check"></i>
                                 </div>
                                 <div>
-                                    <p>Registered Users</p>
+                                    <p>User Management</p>
                                 </div>
                             </div>
                         </a>
@@ -53,7 +53,7 @@
                                     <i class="fa-solid fa-music"></i>
                                 </div>
                                 <div>
-                                    <p>Recorded Audio</p>
+                                    <p>Audio Management</p>
                                 </div>
                             </div>
                         </a>
@@ -92,7 +92,7 @@
                                     <i class="fa-solid fa-list-check"></i>
                                 </div>
                                 <div>
-                                    <p>Assign Tasks</p>
+                                    <p>Task Management</p>
                                 </div>
                             </div>
                         </a>
