--- a/src/templates/task_detail_model.html
+++ b/src/templates/task_detail_model.html
@@ -1,61 +1,69 @@
-<div class="text-gray-700">
-    <div class="flex flex-col space-y-16 w-screen p-5" id="task_detail_model">
-        <div>
-            <a href="{{url_for('task_page')}}">
-                <div class="flex flex-row space-x-3 p-3 shadow-md max-w-max text-blue-500">
-                    <div>
-                        <i class="fa-solid fa-circle-arrow-left"></i>
+<div class="px-10 w-full" id="task_detail_model">
+    <div class="flex flex-col space-y-10">
+        <!-- Title here -->
+        <div class="flex flex-col space-y-3">
+            <div class="text-xl">
+                <p>{{selected_task.name}}</p>
+            </div>
+            <div>
+                <div class="flex flex-row items-center justify-between">
+                    <div class="text-3xl font-bold">
+                        <p>Recording {{recording.id}}</p>
                     </div>
-                    <div>
-                        <p>Back to all tasks</p>
+                    <div class="flex flex-row space-x-3 items-center px-3 py-2 border border-blue-500 rounded-md">
+                        <div>
+                            <p>Completed</p>
+                        </div>
+                        <div class="px-3 text-white bg-blue-500 rounded-md">
+                            <p>1 / 10</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
-        <div class="px-5">
-            <div class="flex flex-col space-y-2">
-                <div class="text-4xl flex flex-row items-center justify-between w-full">
-                    <div>
-                        {{selected_task.name}}
-                    </div>
-                    <div class="text-xl">
-                        STATUS: NOT YET COMPLETE
-                    </div>
-                </div>
-                <div>
-                    <hr>
-                </div>
-                <div class="text-2xl font-bold">
-                    {{recording.transcript}}
                 </div>
             </div>
+            <div class="w-1/4 border">
+                <hr>
+            </div>
         </div>
-        <div class="px-5">
-            <div class="flex flex-col space-y-3 p-3 border rounded-md">
-                <div class="flex flex-row space-x-3">
-                    <div class="flex flex-row space-x-2 text-green-600 font-bold">
-                        <div>
-                            <i class="fa-solid fa-book"></i>
-                        </div>
-                        <div>
-                            <p>Instruction:</p>
-                        </div>
+        <!-- Info here -->
+        <div class="flex flex-col">
+            <div class="bg-gray-700 text-white py-2 px-6 rounded-tl-md rounded-tr-md max-w-max">
+                <div class="flex flex-row space-x-3 uppercase">
+                    <div>
+                        <i class="fa-solid fa-circle-info"></i>
                     </div>
                     <div>
-                        {{recording.instruction}}
+                        information
                     </div>
                 </div>
-                <div class="flex flex-row space-x-3">
-                    <div class="flex flex-row space-x-2 font-bold">
-                        <div>
-                            <i class="fa-solid fa-compact-disc"></i>
-                        </div>
-                        <div>
-                            <p>Sample:</p>
+            </div>
+            <div class="bg-gray-300 rounded-md rounded-tl-none p-3">
+                <div class="flex flex-row item-center justify-center space-x-5 border border-gray-700 border-dashed rounded-md p-3">
+                    <div class="w-1/2">
+                        <div class="flex flex-col space-y-3 w-full items-start">
+                            <div class="font-bold uppercase">
+                                instruction
+                            </div>
+                            <div class="self-center px-10">
+                                {{recording.instruction}}
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        {{recording.sample_filename}}
+                    <div class="w-1/2 border-l pl-5 border-gray-700 border-dotted">
+                        <div class="flex flex-col space-y-3 w-full items-start">
+                            <div class="font-bold uppercase">
+                                <div class="flex flex-row space-x-3 items-center">
+                                    <div>
+                                        transcript
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-music"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="self-center px-10">
+                                {{recording.transcript}}
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
